# curve-cpp

./: CMakeLists.txt  README.md
cmake/: StringUtils.cmake
include/: circle.hpp  curve.hpp  ellipse.hpp  helix.hpp  internal.hpp
src/: circle.cpp  ellipse.cpp  helix.cpp  main.cpp
